* Comment out PHP overrides * Fix pool name at top of config

--- a/templates/default/pool.conf.erb
+++ b/templates/default/pool.conf.erb
@@ -1,4 +1,4 @@
-; Start a new pool named 'www'.
+; Start a new pool named '<%= @pool_name %>'.
 [<%= @pool_name %>]
 
 # <%= [@params].flatten.join " " %>
@@ -156,7 +156,7 @@ pm.max_spare_servers = <%= @max_spare_servers %>
 ; The log file for slow requests
 ; Default Value: not set
 ; Note: slowlog is mandatory if request_slowlog_timeout is set
-slowlog = /var/log/php-fpm/www-slow.log
+;slowlog = /var/log/php-fpm/www-slow.log
 
 ; Set open file descriptor rlimit.
 ; Default Value: system defined value
@@ -219,11 +219,11 @@ slowlog = /var/log/php-fpm/www-slow.log
 ;                specified at startup with the -d argument
 ;php_admin_value[sendmail_path] = /usr/sbin/sendmail -t -i -f www@my.domain.com
 ;php_flag[display_errors] = off
-php_admin_value[error_log] = /var/log/php-fpm/www-error.log
-php_admin_flag[log_errors] = on
+;php_admin_value[error_log] = /var/log/php-fpm/www-error.log
+;php_admin_flag[log_errors] = on
 ;php_admin_value[memory_limit] = 128M
 
 ; Set session path to a directory owned by process user
-php_value[session.save_handler] = files
-php_value[session.save_path] = /var/lib/php/session
+;php_value[session.save_handler] = files
+;php_value[session.save_path] = /var/lib/php/session
 
