--- a/templates/default/pool.conf.erb
+++ b/templates/default/pool.conf.erb
@@ -91,7 +91,7 @@ pm.max_spare_servers = <%= @max_spare_servers %>
 ; This can be useful to work around memory leaks in 3rd party libraries. For
 ; endless request processing specify '0'. Equivalent to PHP_FCGI_MAX_REQUESTS.
 ; Default Value: 0
-;pm.max_requests = <%= @max_requests %>
+pm.max_requests = <%= @max_requests %>
 
 ; The URI to view the FPM status page. If this value is not set, no URI will be
 ; recognized as a status page. By default, the status page shows the following
