Added configuration option for security.limit_extensions

--- a/templates/default/pool.conf.erb
+++ b/templates/default/pool.conf.erb
@@ -359,7 +359,7 @@ catch_workers_output = <%= @catch_workers_output || "no" %>
 ; exectute php code.
 ; Note: set an empty value to allow all extensions.
 ; Default Value: .php
-;security.limit_extensions = .php .php3 .php4 .php5
+security.limit_extensions = <%=@security_limit_extensions || ".php .php3 .php4 .php5" %>
 
 ; Pass environment variables like LD_LIBRARY_PATH. All $VARIABLEs are taken from
 ; the current environment.
