--- a/templates/default/pool.conf.erb
+++ b/templates/default/pool.conf.erb
@@ -41,8 +41,22 @@ listen = <%= @listen || "/var/run/php-fpm-#{@pool_name}.sock" %>
 ; BSD-derived systems allow connections regardless of permissions.
 ; Default Values: user and group are set as the running user
 ;                 mode is set to 0666
+
+<% 
+	listenOwner = @listen_owner || node['php-fpm']['listen_owner']
+	listenGroup = @listen_group || node['php-fpm']['listen_group']
+%>
+
 ;listen.owner = nobody
+<% unless listenOwner.nil? %>
+listen.owner = <%= listenOwner %>
+<% end %>
+
 ;listen.group = nobody
+<% unless listenOwner.nil? %>
+listen.group = <%= listenOwner %>
+<% end %>
+
 listen.mode = 0660
 
 ; List of ipv4 addresses of FastCGI clients which are allowed to connect.
