re #36 Removing UTF-8 character in file comment due to chef bug CHEF-3304

--- a/templates/default/pool.conf.erb
+++ b/templates/default/pool.conf.erb
@@ -194,7 +194,7 @@ pm.max_requests = <%= @max_requests || 500 %>
 ;   start time           - the date and time the process has started;
 ;   start since          - the number of seconds since the process has started;
 ;   requests             - the number of requests the process has served;
-;   request duration     - the duration in µs of the requests;
+;   request duration     - the duration in ms of the requests;
 ;   request method       - the request method (GET, POST, ...);
 ;   request URI          - the request URI with the query string;
 ;   content length       - the content length of the request (only with POST);
