--- a/templates/default/pool.conf.erb
+++ b/templates/default/pool.conf.erb
@@ -111,7 +111,9 @@ pm.max_children = <%= @max_children || 50 %>
 ; The number of child processes created on startup.
 ; Note: Used only when pm is set to 'dynamic'
 ; Default Value: min_spare_servers + (max_spare_servers - min_spare_servers) / 2
-pm.start_servers = <%= @start_servers || 5 %>
+<% if @start_servers %>
+ pm.start_servers = <%= @start_servers %>
+<% end %>
 
 ; The desired minimum number of idle server processes.
 ; Note: Used only when pm is set to 'dynamic'
