--- a/templates/default/pool.conf.erb
+++ b/templates/default/pool.conf.erb
@@ -257,7 +257,7 @@ pm.max_requests = <%= @max_requests || 500 %>
 
 ; The access log file
 ; Default: not set
-;access.log = log/$pool.access.log
+access.log = <%= node['php-fpm']['log_dir'] %>/$pool.access.log
 
 ; The access log format.
 ; The following syntax is allowed
